--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Demo: Wifi ServiceWorker</title>
   </head>
   <body>
-    This is regular content.
+    This is regular content. All is well. Do not be alarmed.
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
