--- a/public/offline.html
+++ b/public/offline.html
@@ -7,6 +7,6 @@
     <title>Demo: Wifi ServiceWorker</title>
   </head>
   <body style="background-color:orange;">
-    You are seeing this instead of the browser's offline warning!
+    You are seeing this instead of the browser's offline warning. All is well. Do not be alarmed.
   </body>
 </html>
