--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,18 @@
     <title>Demo: Wifi ServiceWorker</title>
   </head>
   <body>
-    This is regular content. All is well. Do not be alarmed.
+    1. This is regular content. All is well. Do not be alarmed. You have visited [https://wifiserviceworker.firebaseapp.com/](https://wifiserviceworker.firebaseapp.com/) which should be re-assure you that you are online.
+
+    2. Disconnect your internet connection. Give this website a 'normal' or 'soft' refresh. It will likely remain the same due to being cached*.
+
+    3. Give the website a [hard refresh](http://refreshyourcache.com/en/cache/) i.e:
+  
+    * Windows: ctrl + F5
+    * Mac/Apple: Apple + R or command + R
+    * Linux: F5
+
+    4. You may see a message saying it cannot load the page because of no internet connection upon doing this the first time as you clear the cache. You may even see the 'Fail T-Rex' just the one time as the Cache doesn't come and help you out. Do not be afraid! visit this URL again and you should see offline page with a comforting orange background. Magic!
+
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
