Removing MD from index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <br>
-    <p>1. This is the regular content. All is well. Do not be alarmed. You have visited [https://wifiserviceworker.firebaseapp.com/](https://wifiserviceworker.firebaseapp.com/) which should be re-assure you that you are online.</p>
+    <p>1. This is the regular content. All is well. You are online or the cache of your website is still hanging around.</p>
     <br>
-    <p>2. Disconnect your internet connection. Give this website a 'normal' or 'soft' refresh. It will likely remain the same due to being cached*.</p>
+    <p>2. Disconnect your internet connection. Give this website a 'normal' or 'soft' refresh. It will likely remain the same due to being cached.</p>
     <br>
-    <p>3. Give the website a [hard refresh](http://refreshyourcache.com/en/cache/) i.e:
-  
-    * Windows: ctrl + F5
-    * Mac/Apple: Apple + R or command + R
-    * Linux: F5</p>
+    <p>3. Give the website a hard refresh i.e:
+    <ul>
+    <li>* Windows: ctrl + F5</li>
+    <li>* Mac/Apple: Apple + R or command + R</li>
+    <li>* Linux: F5</li>
+    </ul>
     <br>
     <p>4. You may see a message saying it cannot load the page because of no internet connection upon doing this the first time as you clear the cache. You may even see the 'Fail T-Rex' just the one time as the Cache doesn't come and help you out. Do not be afraid! visit this URL again and you should see offline page with a comforting orange background. Magic!</p>
 
