--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <br>
-    <p>1. This is the regular content. All is well. You are online or the cache of your website is still hanging around.</p>
+    <p>1. This is the regular content. All is well. You are online or the cache of the website is still in your browser. This is how most websites work.</p>
     <br>
     <p>2. Disconnect your internet connection. Give this website a 'normal' or 'soft' refresh. It will likely remain the same due to being cached.</p>
     <br>
@@ -20,6 +20,9 @@
     </ul>
     <br>
     <p>4. You may see a message saying it cannot load the page because of no internet connection upon doing this the first time as you clear the cache. You may even see the 'Fail T-Rex' just the one time as the Cache doesn't come and help you out. Do not be afraid! visit this URL again and you should see offline page with a comforting orange background. Magic!</p>
+
+    <a href=https://github.com/airbr/wifiServiceWorker>See Resources/More at our GitHub</a>
+    <small>contributors: eareese = Emily Reese && airbr = Morgan Murrah</small>
 
     <script type="text/javascript" src="app.js"></script>
   </body>
